[project]
name = "nvidia-reinforcement-learning-fine-tuning"
version = "0.0.1"
description = "NVIDIA GPU-accelerated reinforcement learning fine-tuning for LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.8.0",
    "triton>=3.4.0",
    "torchvision",
    "bitsandbytes",
    "transformers==4.56.2",
    "tokenizers",
    "trl==0.22.2",
    "unsloth_zoo[base] @ git+https://github.com/unslothai/unsloth-zoo",
    "unsloth[base] @ git+https://github.com/unslothai/unsloth",
    "triton_kernels @ git+https://github.com/triton-lang/triton.git@05b2c186c1b6c9a08375389d5efe9cb4c401c075#subdirectory=python/triton_kernels",
    "jupyter>=1.0.0",
    "ipykernel>=6.27.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
]
